--- a/mystyle.css
+++ b/mystyle.css
@@ -12,10 +12,10 @@ h3{
     margin-bottom: 5px;
 }
 
-h4{
+p{
     text-align: center;
     color: white;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 label{
@@ -54,7 +54,6 @@ body{
 
 input[type=checkbox] {
     transform: scale(2);
-    margin-right: 30px;
 }
 
 input[type=number] {
@@ -71,16 +70,16 @@ a:link {
     color: rgb(180, 230, 200);
     background-color: transparent;
     text-decoration: none;
-  }
+}
   
-  a:visited {
+a:visited {
     color: rgb(180, 230, 200);
     background-color: transparent;
     text-decoration: none;
-  }
+}
   
-  a:hover {
+a:hover {
     color: rgb(103, 230, 200);
     background-color: transparent;
     text-decoration: underline;
-  }
+}
