--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
 h1{
     text-align: center;
-    color: white;
-    font-size: 50px;
+    color: whitesmoke;
+    font-size: 60px;
     margin-bottom: 5px;
 }
 
@@ -12,36 +12,9 @@ h3{
     margin-bottom: 5px;
 }
 
-p{
-    text-align: center;
-    color: white;
-    font-size: 20px;
-}
-
 label{
     color: white;
     font-size: 15px;
-}
-
-textarea{
-    width: 450px;
-    height: 45px;
-    resize: none;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(70, 70, 70);
-    color: white;
-    font-size: 25px;
-    margin-top: 5px;
-    text-align: center;
-}
-
-button{
-    text-align: center;
-    text-decoration: none;
-    font-size: 30px;
-    margin: 30px;
 }
 
 div{
@@ -82,4 +55,23 @@ a:hover {
     color: rgb(103, 230, 200);
     background-color: transparent;
     text-decoration: underline;
+}
+
+.btn {
+    border: none;
+    background-color: rgb(59, 59, 59);
+    padding: 7px 14px;
+    
+    cursor: pointer;
+    display: inline-block;
+    color: white;
+}
+
+.copy {
+    font-size: 15px;
+}
+
+.start {
+    margin: 30px;
+    font-size: 30px;
 }
